# Axness

./: docker-compose.prod.yml
api-backend/: README.md  package.json
api-backend/src/: index.ts
api-backend/src/controller/: usercontroller.ts
api-backend/src/controller/order/: order.ts
api-backend/src/inmemory/: inmemory.ts
api-backend/src/middleware/: middleware.ts
api-backend/src/router/: routers.ts
engine-backend/: Cargo.toml
engine-backend/src/: kafka.md  main.rs
engine-backend/src/Inmemory/: Inmemory.rs  mod.rs
engine-backend/src/kafka/: kafkaconnect.rs  mod.rs
engine-backend/src/trading_fn/: mod.rs  trading_function.rs
ws-pollingbackend/: Cargo.toml
ws-pollingbackend/src/: main.rs
