[package]
name = "ws-pollingbackend"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
kafka = "0.10.0"
rust_decimal_macros = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = {version="0.27.0",features = ["native-tls"]}
tungstenite = {version="0.27.0"}
url = "2.5.7"
